# stomper

./: .gitignore  AI-AGENT-PROMPT-PHASE-2.md  CLI-COVERAGE-ANALYSIS.md  CLI-ORCHESTRATOR-INTEGRATION-COMPLETE.md  CLI-UPGRADE-COMPLETE.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  DEBUG-CONFIGURATIONS-GUIDE.md  DEBUG-GUIDE.md  FINAL-PARALLEL-SUMMARY.md  INCLUDE-PATTERN-PRECEDENCE.md  LANGGRAPH-CONCURRENCY-GUIDE.md  PARALLEL-PROCESSING-FAQ.md  PHASE-2-IMPLEMENTATION-COMPLETE.md  PHASE-2-PARALLEL-COMPLETE.md  PHASE-2-QUICK-START.md  QUESTIONS-ANSWERED.md  QUICK-DEBUG-START.md  SEND-API-STATE-ISOLATION-EXPLAINED.md  SESSION-COMPLETE-SUMMARY.md  SESSION-SUMMARY.md  STOMPER-PARALLEL-IMPLEMENTATION-GUIDE.md  USAGE.md  YOUR-THREE-QUESTIONS-ANSWERED.md  debug_parallel_workflow.py  debug_sandbox_status.py  demo_ai_workflow.py  demo_concurrency_explained.md  demo_langgraph_builtin_concurrency.py  demo_langgraph_complete_pattern.py  demo_langgraph_parallel.py  demo_langgraph_parallel_README.md  demo_prompt_generator.py  demo_real_ai.py  demo_sandbox.py  demo_task5_features.py  demo_workflow_visualization.py  justfile  prompt.md  pyproject.toml  show_quality_json.py  (+9 more)
.agent-os/product/: architecture.md  cli-design.md  decisions.md  langgraph-workflow.md  mission.md  roadmap.md  stomper-mvp.md  tech-stack.md
.agent-os/specs/: week1-foundation.md
.agent-os/specs/2024-09-25-week2-ai-agent-integration/: COMPREHENSIVE-REVIEW-COMPLETE.md  PHASE-2-COMPLETE.md  PHASE-2-PARALLEL-PROCESSING-PROMPT.md  TASK-6-COMPLETE.md  spec.md  tasks.md
.agent-os/specs/2024-09-25-week2-ai-agent-integration/sub-specs/: IMPORTANT-STORAGE-LOCATION.md  task-5-COMPLETE.md  task-5-implementation-plan.md  task-5-integration-plan.md  task-6-COMPREHENSIVE-REVIEW.md  task-6-FINAL-REVIEW.md  task-6-IMPLEMENTATION-COMPLETE.md  task-6-PER-FILE-WORKTREE-COMPLETE.md  task-6-REFACTORING-PLAN.md  task-6-SUMMARY.md  task-6-documentation-summary.md  task-6-implementation-plan.md  technical-spec.md  tests.md
.agent-os/specs/complete/: week1-foundation.md
.cursor/commands/: analyze-product.md  plan-product.md
.cursor/rules/: agent-os.mdc  create-spec.mdc  execute-tasks.mdc  stomper-project.mdc
docs/: LOGGING.md  WSL-SUPPORT.md
errors/mypy/: missing-return-type.md
errors/ruff/: E501.md  F401.md
ideas/: file_specification.md  git_flow.md
src/stomper/: __init__.py  __main__.py  cli.py
src/stomper/ai/: __init__.py  agent_manager.py  base.py  cursor_client.py  fix_applier.py  mapper.py  models.py  prompt_generator.py  sandbox_manager.py  validator.py
src/stomper/commands/: __init__.py
src/stomper/config/: __init__.py  loader.py  models.py  validator.py
src/stomper/discovery/: __init__.py  filters.py  git.py  scanner.py
src/stomper/models/: __init__.py  cli.py
src/stomper/quality/: __init__.py  base.py  drill_sergeant.py  manager.py  mypy.py  pytest.py  ruff.py
src/stomper/workflow/: __init__.py  logging.py  orchestrator.py  package_manager.py  state.py
templates/: example_fix_it_prompt.md  fix_prompt.j2
test_errors/: test1.py  test2.py  test3.py
tests/e2e/: test_cli.py  test_cli_integration.py  test_cli_stats.py  test_workflow_integration.py
tests/unit/: test_agent_manager_adaptive.py  test_ai_agent_protocol.py  test_cli_functionality.py  test_config.py  test_cursor_client.py  test_cursor_integration.py  test_discovery.py  test_fix_applier.py  test_fix_validator.py  test_git_discovery.py  test_mapper.py  test_models.py  test_prompt_generator.py  test_prompt_generator_adaptive.py  test_quality_tools.py  test_sandbox_manager.py
